# libcalc

./: .gitignore  CMakeLists.txt  README.md  build.sh
example/: HOWTO.md  calc.h  example.c
export/: calc.h
include/: calc.h  types.h
src/: calc.c  wrapper.c
src/code/: calc.c
src/headers/: types.h
